Fix legends spacing in small devices

--- a/app/assets/stylesheets/deep-insights/themes/scss/map/_canvas.scss
+++ b/app/assets/stylesheets/deep-insights/themes/scss/map/_canvas.scss
@@ -61,11 +61,9 @@ $canvas-dark: rgba(#293A41, 1);
 
 @media (max-width: 759px) {
   body {
-    position: fixed !important;
     width: 100%;
-    overflow: hidden; // Avoid scroll in small screens
   }
-
+  
   .CDB-Dashboard-canvas {
     position: relative;
     box-sizing: border-box;
